# python_packages

./: .gitignore  README.md  setup.cfg  setup.py.save
src/automatic_json_Valemos.egg-info/: PKG-INFO  SOURCES.txt  namespace_packages.txt
src/json_annotated/: __init__.py  a_composite_json_serializable.py  a_optional_json_serializable.py  enum_json.py  i_json_serializable.py  metaclasses.py
src/json_automatic/: __init__.py  a_composite_json_serializable.py  a_container_json_serializable.py  a_optional_json_serializable.py  dict_json.py  enum_json.py  enum_mapping_json.py  enum_named_objects.py  i_json_serializable.py  metaclasses.py  named_object.py  raw_json.py  string_list_json.py
src/test/: test_serialization.py
src/tkinter_extension/: canvas_display.py  tk_context.py
src/tkinter_extension/button/: button_state.py  button_two_states.py  left_right_buttons.py
src/tkinter_extension/entry/: __init__.py  entry_existing_path.py  entry_name_amount.py  entry_validator_with_label.py  entry_with_label.py  float_with_label.py  integer_with_label.py
src/tkinter_extension/menu/: __init__.py  menu_indexed_with_handler.py  menu_object_selector_widget.py  menu_with_handler_widget.py
src/tkinter_extension/widget_list/: a_widget_list.py  deletable_list_item_widget.py  dynamic_widget_list.py  fixed_widget_list.py  list_item_widget.py
test/: test_serialization.py
