[metadata]
name = automatic-json-Valemos
version = 0.0.1
author = Anton Skrypnyk
author_email = programworkerbox@gmail.com
description = A package with json serialization classes to build json from annotations

[options]
package_dir =
    =src
packages = find_namespace:
namespace_packages = json_automatic
python_requires = >=3.7

[options.packages.find]
where = src
